# ansible-arch-linux

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  README.md  ansible.cfg  evaluate_jinja.py  hosts  main.yml  pyproject.toml  requirements.txt  requirements.yml  site.yml  test.yml
.github/workflows/: lint.yml
group_vars/: all.yml  mars.yml
host_vars/: t495s.yml
inventory/: hosts.yml
roles/00_secrets/tasks/: bw_auth.yml  fetch_keys.yml  fetch_single_key.yml
roles/01_host_info/tasks/: main.yml
roles/02_basics/tasks/: main.yml
roles/02_basics/templates/: cachelist.conf.j2  cachelist.j2  mirrorlist.j2  pacman.conf.j2
roles/03_display_server/tasks/: main.yml
roles/03_gpu/tasks/: main.yml
roles/03_packages/tasks/: aur.yml  main.yml
roles/04_desktop/tasks/: main.yml
roles/05_packages/tasks/: aur.yml  flatpak.yml  main.yml
roles/06_users/tasks/: main.yml
roles/07_printing_scanning/tasks/: main.yml
roles/07_users/tasks/: main.yml
roles/08_bluetooth/tasks/: main.yml
roles/08_printing_scanning/tasks/: main.yml
roles/base/tasks/: main.yml
roles/base/templates/: mirrorlist.j2  pacman.conf.j2
roles/gpu/tasks/: main.yml
roles/host_info/tasks/: main.yml
roles/power/tasks/: main.yml
roles/power/templates/: 69-hdparm.rules.j2
roles/secrets/defaults/: main.yml
roles/secrets/tasks/: fetch_keys.yml  fetch_single_key.yml  main.yml
roles/users/tasks/: main.yml
